[master] Responsive align issue fix

--- a/src/Pages/MainPages/page.css
+++ b/src/Pages/MainPages/page.css
@@ -32,7 +32,7 @@
 .page > .container {
   display: flex;
   flex-wrap: wrap;
-
+  justify-content: center;
   margin-bottom: 40px;
 }
 
@@ -112,6 +112,7 @@
 .abouts {
   display: flex;
   align-items: center;
+  justify-content: center;
   margin-bottom: 80px;
   padding-top: 20px;
   text-align: left;
@@ -121,6 +122,7 @@
 .abouts > .description {
   width: 320px;
   font-size: 15px;
+  padding: 0 10px;
 }
 
 .abouts > img {
@@ -188,6 +190,7 @@
   flex-wrap: wrap;
   gap: 20px;
   padding-bottom: 10px;
+  justify-content: center;
 }
 
 .news {
@@ -265,6 +268,8 @@
   display: flex;
   flex-direction: column;
   margin-bottom: 60px;
+  justify-content: center;
+  align-items: center;
 }
 
 .contactContainer > .contact {
@@ -737,6 +742,7 @@
   display: flex;
   flex-wrap: wrap;
   margin-bottom: 50px;
+  justify-content: center;
 }
 
 .course {
